Fix merc action name overflow (#291)

--- a/core/src/css/component/mercenaries/overlay/action-queue/mercenaries-action.component.scss
+++ b/core/src/css/component/mercenaries/overlay/action-queue/mercenaries-action.component.scss
@@ -31,6 +31,9 @@
 	.name {
 		// For mouse over
 		pointer-events: none;
+		span{
+			overflow: hidden;
+		}
 	}
 
 	.portrait {
